manifests/networking/nginx/network-policy/egress-to-host.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-base-to-host-access
  namespace: nginx
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - host
