manifests/networking/nginx/network-policy/egress-to-kube-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-base-to=
  namespace: nginx
spec:
  endpointSelector: {}
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver
