manifests/networking/nginx/network-policy/ingress-from-networking.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-from-cloudflare-tunnel-access
  namespace: nginx
spec:
  endpointSelector: {}
  ingress:
    # Traffic from cloudflare tunnel
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
